full_test/testcases/step11/arr_1sz_2.err
Syntax error: line 1, column 7
int a[1];
Syntax error: line 1, column 9
int a[1];
Syntax error: line 2, column 1
int main() {
Syntax error: line 2, column 5
int main() {
Syntax error: line 3, column 11
    int b[1][1][1][1][1][1];
Syntax error: line 3, column 14
    int b[1][1][1][1][1][1];
Syntax error: line 3, column 17
    int b[1][1][1][1][1][1];
Syntax error: line 3, column 20
    int b[1][1][1][1][1][1];
Syntax error: line 3, column 23
    int b[1][1][1][1][1][1];
Syntax error: line 3, column 26
    int b[1][1][1][1][1][1];
Syntax error: line 4, column 7
    a[0] = b[0][0][0][0][0][0] = 24;
Syntax error: line 4, column 14
    a[0] = b[0][0][0][0][0][0] = 24;
Syntax error: line 4, column 17
    a[0] = b[0][0][0][0][0][0] = 24;
Syntax error: line 4, column 20
    a[0] = b[0][0][0][0][0][0] = 24;
Syntax error: line 4, column 23
    a[0] = b[0][0][0][0][0][0] = 24;
Syntax error: line 4, column 26
    a[0] = b[0][0][0][0][0][0] = 24;
Syntax error: line 4, column 29
    a[0] = b[0][0][0][0][0][0] = 24;
Syntax error: line 5, column 14
    return a[0] + b[0][0][0][0][0][0];
Syntax error: line 5, column 21
    return a[0] + b[0][0][0][0][0][0];
Syntax error: line 5, column 24
    return a[0] + b[0][0][0][0][0][0];
Syntax error: line 5, column 27
    return a[0] + b[0][0][0][0][0][0];
Syntax error: line 5, column 30
    return a[0] + b[0][0][0][0][0][0];
Syntax error: line 5, column 33
    return a[0] + b[0][0][0][0][0][0];
Syntax error: line 5, column 36
    return a[0] + b[0][0][0][0][0][0];
