full_test/testcases/step11/arr_1sz_2.c
int a[1];
int main() {
    int b[1][1][1][1][1][1];
    // a[0] = b[0][0][0][0][0][0] = 24; 我们不支持这种写法 line 4:31 mismatched input '=' expecting ';'
    // 但是我们支持这种写法：
    a[0] = 24;
    b[0][0][0][0][0][0] = 24;
    return a[0] + b[0][0][0][0][0][0];
}
